--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.azan.laivraisonfacile"
+        applicationId "com.livraisonfacile.app"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
